# nimbus

./: .gitignore  Cargo.toml  README.md  _notes.md
src/: args.rs  handlers.rs  main.rs  utils.rs
src/terminal/: emoji.rs
