[package]
name = "nimbus"
version = "0.1.0"
authors = ["SachinMaharana <sachin.nicky@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
cloudflare = "0.7.3"
dialoguer = "0.7.1"
prettytable-rs = "0.8.0"
rand = "0.8.3"
serde = { version = "1.0.123" }
serde_json = "1.0"
structopt = "0.3.21"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
